# lamboot

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IPV6-INFRASTRUCTURE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  SECURITY.md  STATUS-2026-03-28.md  build.sh  export-to-public.sh  package-release.sh  run-qemu-no-entries.sh  run-qemu-nosb-diag.sh  run-qemu-sb-headless.sh  run-qemu-secureboot.sh  run-qemu-signed-llvm-diag.sh  run-qemu-signed-nosbat-diag.sh  run-qemu-unsigned-diag.sh  run-qemu.sh
.githooks/: pre-commit
analysis/: BOOTLOADER-COMPETITIVE-LANDSCAPE-2026-03-27.md  LAMBOOT-MVP-SPECIFICATION-2026-03-27.md  LAMBOOT-TECHNICAL-ASSESSMENT-2026-03-27.md
docs/: ARCHITECTURE-LAYERS.md  ARCHITECTURE.md  CONFIGURATION-GUIDE.md  CROSS-DISTRO-TEST-RESULTS-2026-04-21.md  CROSS-REPO-STATUS.md  DEVELOPER-GUIDE.md  DIAGNOSTIC-MODULES.md  FLEET-TEST-PLAN-2026-04-21.md  FLEET-TEST-RESULTS-2026-04-21.md  IMPLEMENTATION-PLAN.md  INSTALL-REFERENCE.md  INTEGRATED-PLAN-V0.8.3-TO-V1.0.md  KEY-GENERATION.md  LAMBOOT-INSPECT.md  LAMBOOT-LAYER-DIAGRAM-BRIEF-2026-04-21.md  LAMBOOT-TOOLS-OVERVIEW.md  MOK-ENROLLMENT-GUIDE.md  OVMF-VARS-PROXMOX.md  PROXMOX-GUIDE.md  ROADMAP.md  SECURE-BOOT-AND-SIGNING-STRATEGY.md  SECURE-BOOT-DEPLOYMENT.md  SECURITY-GUIDE.md  SECURITY-MODEL.md  TROUBLESHOOTING-GUIDE.md  USER-GUIDE.md  WEBSITE-CONTENT-CORRECTIONS-2026-04-21.md  WEBSITE-CONTENT.md
docs/specs/: SPEC-AUTODISCOVERY-ENHANCEMENTS.md  SPEC-BLS-MULTI-FS.md  SPEC-EXT4-INTEGRATION.md  SPEC-FS-BACKEND-TRAIT.md  SPEC-LAMBOOT-INSTALL.md  SPEC-LAMBOOT-MIGRATE.md  SPEC-NATIVE-PE-LOADER.md  SPEC-NATIVE-TRUST-CHAIN.md  SPEC-PREFLIGHT-VALIDATION.md  SPEC-UEFI-FSDRV-DEPRECATION.md  SPEC-UKI-PE-PARSER.md
examples/: policy.toml
examples/entries/: linux.toml  windows.toml
examples/loader/entries/: fedora-6.11.5+3.conf  fedora-6.12.0.conf
kernel-hooks/: zz-lamboot-postinst  zz-lamboot-postrm
lamboot-core/: Cargo.toml
lamboot-core/src/: acpi.rs  autodiscovery.rs  bls.rs  bls_parse.rs  boot.rs  bootlog.rs  console.rs  discovery.rs  discovery_pure.rs  drivers.rs  font_terminus_32.raw  fs.rs  fs_backend.rs  fs_backend_ext4.rs  fs_backend_fat.rs  fs_types.rs  fs_writer.rs  fw_cfg.rs  gui.rs  health.rs  hypervisor.rs  initrd.rs  input.rs  logo.compressed  logo.raw  main.rs  partitions.rs  pe_loader.rs  pe_loader_pure.rs  policy.rs  preflight.rs  report.rs  secure.rs  security_override.rs  smbios.rs  telemetry.rs  tpm.rs  trust_log.rs  trust_log_pure.rs  uki.rs
lamboot-fs-tests/: Cargo.toml
lamboot-fs-tests/fixtures/ext4/: README.md
lamboot-fs-tests/fixtures/ext4-distro/: .gitignore  download-fixtures.sh  fixtures.sha256
lamboot-fs-tests/src/: cache.rs  lib.rs  mock.rs  tests.rs
lamboot-fs-tests/tests/: bls_parse.rs  discovery_pure.rs  ext4.rs  pe_loader_pure.rs  trust_log_pure.rs
lamboot-modules/: manifest.toml
lamboot-modules/diag-shell/: Cargo.toml
lamboot-modules/diag-shell/src/: main.rs
lamboot-modules/mem-quick/: Cargo.toml
lamboot-modules/mem-quick/src/: main.rs
lamboot-modules/nvme-diag/: Cargo.toml
lamboot-modules/nvme-diag/src/: main.rs
lamboot-modules/pci-inventory/: Cargo.toml
lamboot-modules/pci-inventory/src/: main.rs
tools/: build-tarball.sh  lamboot-hookscript.pl  lamboot-inspect  lamboot-inspect.1  lamboot-install  lamboot-kernel-hook  lamboot-monitor.py  sign-lamboot.sh  sign-lock  sign-unlock  verify-claims.sh
tools/completions/: _lamboot-inspect  lamboot-inspect.bash
tools/lamboot_inspect/: __init__.py  audit.py  boot_log.py  cli.py  dump.py  render.py  report.py  trust_log.py  verify.py
tools/tests/: test_boot_log.py  test_cli.py  test_report_audit.py  test_trust_log.py  test_verify.py
tools/tests/fixtures/: boot.json  trust-log-failed.jsonl  trust-log.jsonl
