[package]
name = "lamboot-fs-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Host-runnable test crate for the SPEC-FS-BACKEND-TRAIT §10.2 unit suite.
#
# The real Layer-2 modules (`fs_backend`, `fs`, `fs_backend_fat`, `fs_writer`)
# live in `lamboot-core`, which is a `no_std` + `no_main` UEFI binary crate —
# `cargo test` there is impossible. This crate re-hosts the _pure_ pieces of
# the abstraction that have zero UEFI dependencies (Path canonicalization,
# Uuid formatting, FsError tokens, VolumeCache LRU) plus an in-memory
# `MockBackend` and runs §10.2 tests against them.
#
# The re-hosted code is byte-identical to the lamboot-core originals via
# `#[path = "..."]` module declarations — no duplication, no drift risk.

[dependencies]
# SDS-3 PR-2: the pe_loader_pure module we verbatim-include via #[path]
# imports goblin + sha2. Version-pin MUST match lamboot-core/Cargo.toml
# so the `#[path]`-included module compiles against the same versions
# as production. Upgrade procedure: bump both Cargo.toml files in lockstep.
goblin = { version = "=0.10.5", default-features = false, features = ["pe64", "endian_fd"] }
sha2 = { version = "=0.10.8", default-features = false }
# SDS-4 PR-4: trust_log_pure uses log::info! in TrustLog::record(). Same
# workspace version as lamboot-core.
log.workspace = true

[dev-dependencies]
# SDS-2 host tests: decompress the bundled ext4 test disk and exercise
# the ext4-view API end-to-end with the exact version lamboot-core pins.
# Version match caught at `cargo test` time so upstream breakage in a
# minor bump surfaces here before it lands in the bootloader binary.
ext4-view = { version = "=0.9.3", default-features = false, features = ["std"] }
zstd = "0.13"
